--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -26,9 +26,11 @@ jobs:
           http_url: ${{ secrets.CLEANSING_SYSTEM_STATUS_URL }} # The data to fetch
           authorization: ${{ secrets.AUTHORIZATION }}
           downloaded_filename: myaccount-platform-status.json # The http_url gets saved and renamed in our repository
+          postprocess: postprocess.js # A postprocessing javascript or typescript file written in Deno
       - name: Fetch data
         uses: githubocto/flat@mr/node16
         with:
           http_url: ${{ secrets.LIM_SYSTEM_STATUS_URL }} # The data to fetch
           authorization: ${{ secrets.AUTHORIZATION }}
           downloaded_filename: myaccount-platform-status.json # The http_url gets saved and renamed in our repository
+          postprocess: postprocess.js # A postprocessing javascript or typescript file written in Deno
