--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           http_url: ${{ secrets.CLEANSING_SYSTEM_STATUS_URL }} # The data to fetch
           mask: true
-          authorization: ${{ fromJson(steps.refreshToken.outputs.response).access_token }}
+          authorization: 'Zoho-oauthtoken ${{ fromJson(steps.refreshToken.outputs.response).access_token }}'
           downloaded_filename: myaccount-platform-status.json # The http_url gets saved and renamed in our repository
           postprocess: postprocess.js # A postprocessing javascript or typescript file written in Deno
       - name: Fetch data
@@ -40,6 +40,6 @@ jobs:
         with:
           http_url: ${{ secrets.LIM_SYSTEM_STATUS_URL }} # The data to fetch
           mask: true
-          authorization: ${{ fromJson(steps.refreshToken.outputs.response).access_token }}
+          authorization: 'Zoho-oauthtoken ${{ fromJson(steps.refreshToken.outputs.response).access_token }}'
           downloaded_filename: myaccount-platform-status.json # The http_url gets saved and renamed in our repository
           postprocess: postprocess.js # A postprocessing javascript or typescript file written in Deno
